@@ -1,3 +1,5 @@
+STR_DOM_MISSIONSTRING_400_EXTREME
+STR_DOM_MISSIONSTRING_GUERRILLAS
 STR_DOM_MISSIONSTRING_2086
 STR_DOM_MISSIONSTRING_2087
 STR_DOM_MISSIONSTRING_2088
