@@ -5,7 +5,9 @@ STR_DOM_MISSIONSTRING_214
 STR_DOM_MISSIONSTRING_237
 STR_DOM_MISSIONSTRING_239
 STR_DOM_MISSIONSTRING_266
+STR_DOM_MISSIONSTRING_400_EXTREME
 STR_DOM_MISSIONSTRING_418DEFAULT
+STR_DOM_MISSIONSTRING_GUERRILLAS
 STR_DOM_MISSIONSTRING_541
 STR_DOM_MISSIONSTRING_656
 STR_DOM_MISSIONSTRING_722_GENERIC_NAME
