@@ -1,79 +1,3 @@
-STR_DOM_MISSIONSTRING_418DEFAULT
-STR_DOM_MISSIONSTRING_ALL
+STR_DOM_MISSIONSTRING_400_EXTREME
+STR_DOM_MISSIONSTRING_GUERRILLAS
 STR_DOM_MISSIONSTRING_1007_RANDOM
-STR_DOM_MISSIONSTRING_1177_FORCE_NO_HUD
-STR_DOM_MISSIONSTRING_SQUAD
-STR_DOM_MISSIONSTRING_1805_TRIGGERMAN
-STR_DOM_MISSIONSTRING_1805_DEFUSE
-STR_DOM_MISSIONSTRING_1805_DEFUSE_NOW
-STR_DOM_MISSIONSTRING_MARKEDFORDEATH
-STR_DOM_MISSIONSTRING_MARKEDFORDEATHSUCCEED
-STR_DOM_MISSIONSTRING_EVENTSUCCEED
-STR_DOM_MISSIONSTRING_EVENTWARNINGTIME
-STR_DOM_MISSIONSTRING_1894_TELL_ARTY_CAS
-STR_DOM_MISSIONSTRING_1900PATROL
-STR_DOM_MISSIONSTRING_1900MAXGROUPS
-STR_DOM_MISSIONSTRING_1900GROUPSIZE
-STR_DOM_MISSIONSTRING_PRISONERSANDEXPLOSIVES_DEFUSE
-STR_DOM_MISSIONSTRING_PRISONERSANDEXPLOSIVES_TRIGGERMAN
-STR_DOM_MISSIONSTRING_EXPLOSIVES_PRESENT
-STR_DOM_MISSIONSTRING_EXPLOSIVES_FAIL
-STR_DOM_MISSIONSTRING_EXPLOSIVES_SUCCESS
-STR_DOM_MISSIONSTRING_2038
-STR_DOM_MISSIONSTRING_2039
-STR_DOM_MISSIONSTRING_2040
-STR_DOM_MISSIONSTRING_2041
-STR_DOM_MISSIONSTRING_AI_SILENT
-STR_DOM_MISSIONSTRING_LOAD_OVERRIDES_FILE
-STR_DOM_MISSIONSTRING_2042
-STR_DOM_MISSIONSTRING_2043
-STR_DOM_MISSIONSTRING_2044
-STR_DOM_MISSIONSTRING_2045
-STR_DOM_MISSIONSTRING_2046
-STR_DOM_MISSIONSTRING_2047
-STR_DOM_MISSIONSTRING_2048
-STR_DOM_MISSIONSTRING_2049
-STR_DOM_MISSIONSTRING_2050
-STR_DOM_MISSIONSTRING_STATICWEAPONS
-STR_DOM_MISSIONSTRING_ENABLE_GUARD
-STR_DOM_MISSIONSTRING_2051
-STR_DOM_MISSIONSTRING_2052
-STR_DOM_MISSIONSTRING_2053
-STR_DOM_MISSIONSTRING_2054
-STR_DOM_MISSIONSTRING_2055
-STR_DOM_MISSIONSTRING_2056
-STR_DOM_MISSIONSTRING_2057
-STR_DOM_MISSIONSTRING_2058
-STR_DOM_MISSIONSTRING_2059
-STR_DOM_MISSIONSTRING_2060
-STR_DOM_MISSIONSTRING_2061
-STR_DOM_MISSIONSTRING_MT_RADIUS
-STR_DOM_MISSIONSTRING_2062
-STR_DOM_MISSIONSTRING_2063
-STR_DOM_MISSIONSTRING_2064
-STR_DOM_MISSIONSTRING_2065
-STR_DOM_MISSIONSTRING_2066
-STR_DOM_MISSIONSTRING_2067
-STR_DOM_MISSIONSTRING_2068
-STR_DOM_MISSIONSTRING_2069
-STR_DOM_MISSIONSTRING_2070
-STR_DOM_MISSIONSTRING_2071
-STR_DOM_MISSIONSTRING_2072
-STR_DOM_MISSIONSTRING_2073
-STR_DOM_MISSIONSTRING_2074
-STR_DOM_MISSIONSTRING_2075
-STR_DOM_MISSIONSTRING_2076
-STR_DOM_MISSIONSTRING_2077
-STR_DOM_MISSIONSTRING_2078
-STR_DOM_MISSIONSTRING_2079
-STR_DOM_MISSIONSTRING_2080
-STR_DOM_MISSIONSTRING_2081
-STR_DOM_MISSIONSTRING_2082
-STR_DOM_MISSIONSTRING_2083
-STR_DOM_MISSIONSTRING_SUPPRESS_VOICES
-STR_DOM_MISSIONSTRING_2084
-STR_DOM_MISSIONSTRING_2085
-STR_DOM_MISSIONSTRING_2086
-STR_DOM_MISSIONSTRING_2087
-STR_DOM_MISSIONSTRING_2088
-STR_DOM_MISSIONSTRING_2089
