@@ -13,9 +13,11 @@ STR_DOM_MISSIONSTRING_363_ON
 STR_DOM_MISSIONSTRING_399_VERYLOW
 STR_DOM_MISSIONSTRING_399B
 STR_DOM_MISSIONSTRING_400_VERYHIGH
+STR_DOM_MISSIONSTRING_400_EXTREME
 STR_DOM_MISSIONSTRING_418DEFAULT
 STR_DOM_MISSIONSTRING_418B
 STR_DOM_MISSIONSTRING_418C
+STR_DOM_MISSIONSTRING_GUERRILLAS
 STR_DOM_MISSIONSTRING_418C_GUERR
 STR_DOM_MISSIONSTRING_ALL
 STR_DOM_MISSIONSTRING_521
