@@ -1,6 +1,4 @@
-STR_DOM_MISSIONSTRING_418DEFAULT
 STR_DOM_MISSIONSTRING_ALL
-STR_DOM_MISSIONSTRING_SQUAD
 STR_DOM_MISSIONSTRING_1805_TRIGGERMAN
 STR_DOM_MISSIONSTRING_1805_DEFUSE
 STR_DOM_MISSIONSTRING_1805_DEFUSE_NOW
@@ -8,10 +6,4 @@ STR_DOM_MISSIONSTRING_EVENTWARNINGTIME
 STR_DOM_MISSIONSTRING_PRISONERSANDEXPLOSIVES_DEFUSE
 STR_DOM_MISSIONSTRING_PRISONERSANDEXPLOSIVES_TRIGGERMAN
 STR_DOM_MISSIONSTRING_MT_RADIUS
-STR_DOM_MISSIONSTRING_SUPPRESS_VOICES
-STR_DOM_MISSIONSTRING_2084
 STR_DOM_MISSIONSTRING_2085
-STR_DOM_MISSIONSTRING_2086
-STR_DOM_MISSIONSTRING_2087
-STR_DOM_MISSIONSTRING_2088
-STR_DOM_MISSIONSTRING_2089
