@@ -3,7 +3,9 @@ STR_DOM_MISSIONSTRING_179a
 STR_DOM_MISSIONSTRING_235
 STR_DOM_MISSIONSTRING_239
 STR_DOM_MISSIONSTRING_308
+STR_DOM_MISSIONSTRING_400_EXTREME
 STR_DOM_MISSIONSTRING_418DEFAULT
+STR_DOM_MISSIONSTRING_GUERRILLAS
 STR_DOM_MISSIONSTRING_ALL
 STR_DOM_MISSIONSTRING_614
 STR_DOM_MISSIONSTRING_631
